Fixing scrollbar color and SeePosts page

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -17,7 +17,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--gray-dark-2);;
+    background: var(--light-dkgray-dark-lgpurple);
 }
 
 ::-webkit-scrollbar-thumb:hover {
